# ST-PolygonCluster

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: example.geojson  example_output.geojson
examples/: example_usage.py
st_polygoncluster/: __init__.py  clustering.py  neighbors.py
tests/: test_clustering.py  test_neighbors.py
