[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st_polygoncluster"
version = "0.1.0"
description = "Spatio-temporal clustering for polygon geometries"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mykola Kozyr" }]
keywords = ["geopandas", "geospatial", "clustering", "polygons", "spatio-temporal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "geopandas",
  "numpy",
  "pandas",
  "scipy",
  "shapely",
]

[project.urls]
Homepage = "https://github.com/mykolakozyr/ST-PolygonCluster"

[tool.setuptools]
packages = ["st_polygoncluster"]


